app/assets/stylesheets/application.scss
@import "font-awesome";
@import "react-sortable-tree";
.full-btn{
  width: 100% !important;
}

#current-house-select{
  color: black !important;
}

.top_banner_form {
  form {
    width: 100%;
  }

  .btn {
    width: 100% !important;
  }
}

.house-info {
  h1 {
    text-align: center;
  }
}

.card-columns {
  -webkit-column-count: 2 !important;
  -moz-column-count: 2 !important;
  column-count: 2 !important;
}

@media screen and (max-width: 1200px) {
  *{
    font-size: 40px !important;
  }
  .rst__tree{
    *{
      font-size: 15px !important;
    }
  }

  .card-columns {
    -webkit-column-count: 1 !important;
    -moz-column-count: 1 !important;
    column-count: 1 !important;
  }
}

.todo-checkbox{
  margin: 5px;
}

